Render crash with simple object only in debug build #54337

Closed
opened 2018-03-16 18:22:18 +01:00 by Rob Hughes · 8 comments

System Information
5820K Windows10 GTX 970

Blender Version
Latest local build from master - date 16/03/2018

Short description of error
Render throws exception in debug build with very simple mesh - with adaptive subdivision

Problem appears to be in mesh_subdivsion.cpp
Line 193 int num_local_points = patch_table->GetNumLocalPoints();
returns zero
which means length of verts array is not increased and so
Line 207 patch_table->ComputeLocalPointValues(&verts- [x], &verts[num_refiner_verts]);
fails because num_refiner_verts is greater than length of array (last element is num_refiner_verts-1)

Hope that helps.

Exact steps for others to reproduce the error
Run debug version.
Load attached scene
Hit F12 to render

PatchT1.blend

**System Information** 5820K Windows10 GTX 970 **Blender Version** Latest local build from master - date 16/03/2018 **Short description of error** Render throws exception in debug build with very simple mesh - with adaptive subdivision Problem appears to be in mesh_subdivsion.cpp Line 193 int num_local_points = patch_table->GetNumLocalPoints(); returns zero which means length of verts array is not increased and so Line 207 patch_table->ComputeLocalPointValues(&verts- [x], &verts[num_refiner_verts]); fails because num_refiner_verts is greater than length of array (last element is num_refiner_verts-1) Hope that helps. **Exact steps for others to reproduce the error** Run debug version. Load attached scene Hit F12 to render [PatchT1.blend](https://archive.blender.org/developer/F2446322/PatchT1.blend)
Author

Added subscriber: @RevDr

Added subscriber: @RevDr
Member

Added subscribers: @MaiLavelle, @LazyDodo

Added subscribers: @MaiLavelle, @LazyDodo
Member

can confirm the issue, @MaiLavelle mind taking a peek here?

can confirm the issue, @MaiLavelle mind taking a peek here?

This issue was referenced by blender/cycles@4dd9298752

This issue was referenced by blender/cycles@4dd9298752ff0ba7db78dd7bd27320578e853461

This issue was referenced by fa01a1738b

This issue was referenced by fa01a1738bd1e3a6750ffbe523a282bc22de3991
Mai Lavelle self-assigned this 2018-04-04 05:38:41 +02:00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Hi,

Thanks for the changes/ However, the basic test scene is still crashing for me in Debug,

Line 209

patch_table->ComputeLocalPointValues(&verts[0], &verts[num_refiner_verts]);

Problem is num_local_points is zero so length of array set in line 195..

verts.resize(num_refiner_verts + num_local_points);

..is equal to num_refiner_points

Therefore line 209 fails because &verts[num_refiner_verts] is outside bounds of array.

Hi, Thanks for the changes/ However, the basic test scene is still crashing for me in Debug, Line 209 ``` patch_table->ComputeLocalPointValues(&verts[0], &verts[num_refiner_verts]); ``` Problem is num_local_points is zero so length of array set in line 195.. ``` verts.resize(num_refiner_verts + num_local_points); ``` ..is equal to num_refiner_points Therefore line 209 fails because &verts[num_refiner_verts] is outside bounds of array.
Member

Oops, used the wrong variable, will commit a fix shortly.

Oops, used the wrong variable, will commit a fix shortly.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54337
No description provided.