Fix T54337: Cycles crash with simple subd object in debug build